site(windows): fix width to remove horizontal scrollbar

--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -12,7 +12,7 @@
 
 body {
 	height: 100vh;
-	width: 100vw;
+	width: 100%;
 
 	font: 1em/1.5 "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
 
